@@ -1,5 +1,8 @@
 2011-04-01  Mark Grondona <mgrondona@llnl.gov>
 
+	* tests/t2000-exec.sh :
+	  Add a few simple exec module specific tests.
+
 	* src/modules/sscmd.c :
 	  Fix interactive dsh with ssh. (Issue 14)
 
